--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -4,6 +4,6 @@
     <li><a routerLink="/">Inicio</a></li>
     <li><a routerLink="/cuentos">Cuentos</a></li>
     <li><a routerLink="/carrito">Carrito</a></li>
-    <li><a routerLink="/login">Login</a></li>
+    <li><a routerLink="/login"><button mat-button (click)="openLoginDialog()">Login</button></a></li>
   </ul>
 </nav>
