cambios sobre nav-bar

--- a/src/app/components/cuento-card/cuento-card.component.html
+++ b/src/app/components/cuento-card/cuento-card.component.html
@@ -2,5 +2,5 @@
   <img src="https://placehold.co/150x100?text=cuento" alt="Portada del cuento" />
   <h2>{{ cuento.titulo }}</h2>
   <p>{{ cuento.autor }}</p>
-  <button>Agregar al carrito</button>
+  <button (click)="agregarAlCarrito()">Agregar al carrito</button>
 </div>
