--- a/src/app/components/detalle-cuento/detalle-cuento.component.html
+++ b/src/app/components/detalle-cuento/detalle-cuento.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="cuento" class="detalle-wrapper">
-    <div class="cuento-imagen">
-      <img [src]="cuento.imagenUrl || 'assets/placeholder-cuento.jpg'" alt="Portada de {{ cuento.titulo }}" />
+    <div class="cuento-imagen" >
+      
+      <img [src]="cuento.imagenUrl || '../.. /assets/placeholder-cuento.jpg'" alt="Portada de {{ cuento.titulo }}" />
     </div>
   
     <div class="cuento-info">
