se suben cambios ok

--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -2,24 +2,74 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  padding: 0.8rem 2rem;
   background-color: #A66E38;
   color: white;
+  font-weight: 600;
 
-  .logo {
-    font-size: 1.5rem;
-    font-weight: bold;
+    .navbar-brand {
+    font-size: 1.6rem;
   }
-
   .nav-links {
     list-style: none;
     display: flex;
-    gap: 1rem;
+    align-items: center;
+    gap: 1.5rem;
   }
 
-  a {
+      li a {
+      text-decoration: none;
+      color: white;
+      transition: color 0.3s ease;
+
+      &:hover {
+        color: #ffeead; /* dorado claro al pasar mouse */
+      }
+    }
+
+    .btn-login, .btn-logout {
+      background-color: white;
+      color: #a66e38;
+      border: 2px solid #ffeead;
+      border-radius: 20px;
+      padding: 5px 15px;
+      font-size: 14px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: background-color 0.3s, color 0.3s;
+
+      &:hover {
+        background-color: #ffeead;
+        color: #5a3923;
+      }
+    }
+
+    .usuario-saludo {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      font-size: 14px;
+    }   
+}
+.carrito-btn button {
+  background: transparent;
+  border: none;
+  color: white;
+  position: relative;
+  cursor: pointer;
+
+  .material-icons {
+    font-size: 28px;
+  }
+  .contador {
+    position: absolute;
+    top: -8px;
+    right: -8px;
+    background-color: #ffad60;
     color: white;
-    text-decoration: none;
+    border-radius: 50%;
+    font-size: 12px;
+    padding: 2px 6px;
   }
 }
 
