--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,18 +1,28 @@
 <nav class="navbar">
-  <div class="logo">Cuentos de Killa</div>
+  <div  class="navbar-brand">Cuentos de Killa</div>
   <ul class="nav-links">
     <li><a routerLink="/">Inicio</a></li>
     <li><a routerLink="/cuentos">Cuentos</a></li>
-    <li><a routerLink="/carrito">Carrito</a><button mat-icon-button (click)="abrirCarrito()">
-      🛒
+    <!-- <li><a routerLink="/carrito">Carrito</a><button mat-icon-button (click)="abrirCarrito()">
+      <span class="material-icons">shopping_cart</span>
       <span *ngIf="cantidadItems > 0" class="contador">{{ cantidadItems }}</span>
-    </button></li>
+    </button></li> -->
+    <li >
+      <a routerLink="/carrito" >
+      <button mat-icon-button (click)="abrirCarrito()" class="cart-button">
+        <span class="material-icons">shopping_cart</span>
+        <span *ngIf="cantidadItems > 0" class="contador">{{ cantidadItems }}</span>
+      </button>
+      <span class="carrito-texto">Carrito</span>
+      </a>
+    
+    </li>
     <li *ngIf="!userName">
-      <button mat-button>Login</button>
+      <button class="btn-login" (click)="openLoginDialog()">Login</button>
     </li>
     <li *ngIf="userName">
       <span>👋 ¡Hola, {{ userName }}!</span>
-      <button mat-button>Logout</button>
+      <button class="btn-logout" (click)="logout()">Logout</button>
     </li> 
 
   </ul>
