agregar al carrito

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,5 +1,8 @@
 <nav class="navbar">
-  <div class="navbar-brand">Cuentos de Killa</div>
+  <div class="navbar-brand">
+    <img src="assets/killa.bmp" alt="Cuentos de Killa" class="logo-img" />
+    <span class="brand-text">Cuentos de Killa</span>
+  </div>
   <ul class="nav-links">
     <li><a routerLink="/">Inicio</a></li>
     <li><a routerLink="/cuentos">Cuentos</a></li>
