--- a/src/app/components/cuentos-grid/cuentos-grid.component.html
+++ b/src/app/components/cuentos-grid/cuentos-grid.component.html
@@ -1,17 +1,9 @@
-<!-- <section class="cuentos-grid">
-  <app-cuento-card *ngFor="let cuento of cuentos" 
-  [cuento]="cuento">
-  </app-cuento-card>
-</section> -->
-
-
-<!-- <div class="cuentos-grid-container">
-  <app-cuento-card *ngFor="let cuento of cuentos" [cuento]="cuento"></app-cuento-card>
-</div> -->
 <div class="grid-cuentos">
   <div class="cuento-card" *ngFor="let cuento of cuentos" (click)="verDetalle(cuento.id)">
     <h3>{{ cuento.titulo }}</h3>
     <p>{{ cuento.autor }}</p>
+    <p>{{ cuento.descripcionCorta }}</p>
     <button (click)="verDetalle(cuento.id)">Ver detalle</button>
+    <button (click)="agregarAlCarrito(cuento)">Agregar al carrito</button>
   </div>
 </div>
