--- a/src/app/components/detalle-cuento/detalle-cuento.component.scss
+++ b/src/app/components/detalle-cuento/detalle-cuento.component.scss
@@ -119,8 +119,8 @@
 
 .detalle-imagen {
   position: relative;
-  width: 100%;
-  height: 100%;
+  width: 70%;
+  height: 70%;
   background-color: #f0f0f0;
   display: flex;
   align-items: center;
@@ -130,9 +130,9 @@
   img {
     width: 100%;
     height: 100%;
-    object-fit: cover;
+    object-fit: contain;
     opacity: 0;
-     transition: opacity 0.5s ease-in;
+    transition: opacity 0.5s ease-in;
     position: absolute;
     top: 0;
     left: 0;
