--- a/src/app/components/cuentos-grid/cuentos-grid.component.html
+++ b/src/app/components/cuentos-grid/cuentos-grid.component.html
@@ -1,4 +1,4 @@
-<div class="grid-cuentos">
+<!-- <div class="grid-cuentos">
   <div class="cuento-card" *ngFor="let cuento of cuentos" (click)="verDetalle(cuento.id)">
     <h3>{{ cuento.titulo }}</h3>
     <p>{{ cuento.autor }}</p>
@@ -6,4 +6,14 @@
     <button (click)="verDetalle(cuento.id)">Ver detalle</button>
     <button (click)="agregarAlCarrito(cuento)">Agregar al carrito</button>
   </div>
+</div> -->
+<div class="grid-cuentos">
+  <app-cuento-card 
+    *ngFor="let cuento of cuentos"
+    [cuento]="cuento"
+    (agregar)="agregarAlCarrito($event)"
+    (detalle)="verDetalle($event)"
+    >
+    
+  </app-cuento-card>
 </div>
