--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -26,24 +26,25 @@
 <!-- Sidebar del Carrito -->
 <div class="cart-sidebar" [class.open]="carritoAbierto">
   <div class="cart-header">
-    <h3>Mi Carritoxxxx</h3>
-    <button (click)="cerrarCarrito()">✖</button>
+    <h3>Mi Carrito</h3>
+    <button class="close-btn" (click)="cerrarCarrito()">✖</button>
   </div>
   <div class="cart-body">
-    <!-- <div *ngIf="cantidadItems === 0">Tu carrito está vacío.</div>
-    <div *ngIf="cantidadItems > 0">
-      <p *ngFor="let cuento of CartService.obtenerItems()">
-        📖 {{ cuento.cuento.titulo }}
-      </p>
-    </div> -->
     <div class="carrito-item" *ngFor="let item of itemsCarrito">
       <i class="fa fa-book"></i>
-      <span>{{ item.cuento?.titulo }}</span>
-      <span *ngIf="item.cantidad" class="cantidad">(x{{ item.cantidad }})</span>
-      <button (click)="CartService.removeItem(item.cuento.id)">🗑️</button>
+      <button class="delete-btn"(click)="CartService.removeItem(item.cuento.id)">❌</button>
+      <span class="titulo-cuento">{{ item.cuento?.titulo }}</span>
+      <span  *ngIf="item.cantidad" class="cantidad">(x{{ item.cantidad }})</span>      
+      <span class="precio-item">
+        S/ {{ (item.cuento.precio * item.cantidad) | number:'1.2-2' }}
+      </span>
     </div>
+    <div class="subtotal-container">
+      <span class="subtotal-label">Subtotal:</span>
+      <span class="subtotal-valor">{{ calcularSubtotal() | currency:'PEN' }}</span>
+    </div>
+    <button class="btn-primary" (click)="irACheckout()">Checkout</button>
   </div>
 </div>
-
 <!-- Overlay -->
 <div class="overlay" [class.show]="carritoAbierto" (click)="cerrarCarrito()"></div>
