--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -159,8 +159,17 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  h3 {
+    margin: 0;
+    font-weight: bold;
+  }
+  .close-btn {
+    background: none;
+    border: none;
+    font-size: 18px;
+    cursor: pointer;
+  }
 }
-
 .cart-body {
   margin-top: 20px;
 }
@@ -199,28 +208,122 @@
   margin-left: 4px;
 }
 
+// .carrito-item {
+//   display: flex;
+//   align-items: center;
+//   gap: 8px;
+//   margin-bottom: 10px;
+//   font-size: 14px;
+
+//   i {
+//     color: #5d4037;
+//   }
+
+//   .cantidad {
+//     color: #757575;
+//     font-size: 12px;
+//   }
+
+//   // button {
+//   //   background: none;
+//   //   border: none;
+//   //   cursor: pointer;
+//   //   margin-left: auto;
+//   //   color: #e57373;
+//   //   font-size: 18px;
+//   // }
+// }
+
+
+.sidebar-container {
+  padding: 1rem;
+  width: 300px;
+  background-color: #fffef5;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
 .carrito-item {
   display: flex;
   align-items: center;
   gap: 8px;
-  margin-bottom: 10px;
+  margin-bottom: 12px;
+  border-bottom: 1px solid #eee;
+  padding-bottom: 8px;
   font-size: 14px;
 
-  i {
-    color: #5d4037;
+  .delete-btn {
+    background: none;
+    border: none;
+    font-size: 18px;
+    color: #a94438;
+    cursor: pointer;
+    transition: color 0.3s;
+
+    &:hover {
+      color: #ff0000;
+    }
+  }
+  .titulo-cuento {
+    flex: 1;
+    font-weight: 500;
+    color: #333;
   }
 
   .cantidad {
-    color: #757575;
-    font-size: 12px;
+    font-style: italic;
+    color: #666;
   }
 
-  button {
-    background: none;
-    border: none;
-    cursor: pointer;
-    margin-left: auto;
-    color: #e57373;
-    font-size: 18px;
+  .precio-item {
+    font-weight: bold;
+    color: #a66e38;
+    min-width: 60px;
+    text-align: right;
   }
 }
+
+.subtotal-container {
+  display: flex;
+  justify-content: space-between;
+  font-size: 16px;
+  font-weight: 600;
+  margin-top: 16px;
+  border-top: 1px solid #ccc;
+  padding-top: 10px;
+
+  .subtotal-label {
+    color: #444;
+  }
+
+  .subtotal-valor {
+    color: #222;
+  }
+}
+.cart-sidebar {
+  background-color: #fff7ef;
+  padding: 20px;
+  width: 300px;
+  font-family: 'Arial', sans-serif;
+  box-shadow: -2px 0 8px rgba(0, 0, 0, 0.1);
+}
+.btn-primary {
+  background-color: #a66e38;
+  color: #fff;
+  padding: 10px 16px;
+  border: none;
+  border-radius: 6px;
+  width: 100%;
+  font-weight: bold;
+  font-size: 15px;
+  cursor: pointer;
+  margin-top: 16px;
+  box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+  transition: background-color 0.3s;
+
+  &:hover {
+    background-color: #85562d;
+  }
+}
+
