--- a/src/app/components/pages/login/login.component.html
+++ b/src/app/components/pages/login/login.component.html
@@ -1,16 +1,18 @@
 <div class="login-container">
+  <div class="formulario">
     <h2>Iniciar sesión</h2>
-  
-    <form [formGroup]="loginForm" (ngSubmit)="iniciarSesion()" class="login-form">
+    <form [formGroup]="loginForm" (ngSubmit)="iniciarSesion()">
       <label for="correo">Correo electrónico</label>
       <input id="correo" type="email" formControlName="correo" required />
-  
+
       <label for="password">Contraseña</label>
       <input id="password" type="password" formControlName="password" required />
-  
+
       <button type="submit" class="btn-primary">Iniciar sesión</button>
     </form>
-  
-    <p *ngIf="error" class="error-msg">{{ error }}</p>
   </div>
-  
+
+  <div class="ilustracion">
+    <img src="/assets/libros_killa.png" alt="Ilustración lectura" />
+  </div>
+</div>
