--- a/src/app/components/pages/admin/admin-cuentos/admin-cuentos.component.html
+++ b/src/app/components/pages/admin/admin-cuentos/admin-cuentos.component.html
@@ -1,7 +1,19 @@
 <div class="cuentos-container">
     <h2>Gestión de Cuentos</h2>
     <div class="cuentos-grid">
-      <app-cuento-card *ngFor="let cuento of cuentos" [cuento]="cuento"></app-cuento-card>
+      <!-- <app-cuento-card *ngFor="let cuento of cuentos" [cuento]="cuento"></app-cuento-card> -->
+    </div>
+    <div class="cuento-card">
+      <div *ngFor="let cuento of cuentos">
+        <img [src]="cuento.imagenUrl || 'assets/placeholder-cuento.jpg'" alt="{{cuento.titulo}}" (error)="cargarImagenPlaceholder($event)">
+        <h3>{{ cuento.titulo }}</h3>
+        <p>{{ cuento.autor }}</p>
+      
+        <div class="acciones">
+          <button (click)="verDetalle(cuento.id)">Ver detalle</button>
+        </div>
+  
+      </div>
     </div>
   </div>
   
