--- a/src/app/components/pages/login/login.component.scss
+++ b/src/app/components/pages/login/login.component.scss
@@ -10,11 +10,12 @@
 }
 
 .login-container {
+  flex-wrap: wrap;
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 1000px; // antes 900px
-  width: 90vw;
+  max-width: 900px; // antes 900px
+  width: 70vw;
   margin: 3rem auto;
   padding: 2rem 3rem;
   border-radius: 24px;
