--- a/src/app/components/pages/order-list/order-list.component.scss
+++ b/src/app/components/pages/order-list/order-list.component.scss
@@ -1,4 +1,4 @@
-@import '../../../styles.scss'; // Ajusta la ruta si es necesario
+@import './../../../../styles.scss'; // Ajusta la ruta si es necesario
 
 .order-list-container {
   padding: 2rem;
