--- a/src/app/components/pages/order-detail/order-detail.component.scss
+++ b/src/app/components/pages/order-detail/order-detail.component.scss
@@ -1,4 +1,4 @@
-@import '../../../styles.scss'; // Ajusta la ruta si es necesario
+@import './../../../../styles.scss'; // Ajusta la ruta si es necesario
 
 .order-detail-container {
   padding: 2rem;
