--- a/src/app/components/pages/admin/admin-layout/admin-layout.component.html
+++ b/src/app/components/pages/admin/admin-layout/admin-layout.component.html
@@ -10,7 +10,7 @@
     </aside>
   
     <main class="content">
-      <!-- <router-outlet></router-outlet> -->
+      <router-outlet></router-outlet>
     </main>
   </div>
   
