--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,17 +1,17 @@
 <nav class="navbar">
-  <div class="navbar-brand">
+  <a class="navbar-brand">
     <img src="assets/killa.bmp" alt="Cuentos de Killa" class="logo-img" />
     <span class="brand-text">Cuentos de Killa</span>
-  </div>
+  </a>
   <ul class="nav-links">
-    <li><a routerLink="/">Inicio</a></li>
-    <li><a routerLink="/cuentos">Cuentos</a></li>
+    <li><a routerLink="/home" routerLinkActive="active">Inicio</a></li>
+    <li><a routerLink="/home" routerLinkActive="active">Cuentos</a></li>
     <li>
-      <div class="carrito-enlace" (click)="abrirCarrito()">
+      <a class="carrito-enlace" (click)="abrirCarrito()" style="cursor: pointer;" >
         🛒
         <span class="cart-badge" *ngIf="cantidadTotalItems > 0">{{ cantidadTotalItems }}</span>
         <span class="cart-label">Carrito</span>
-      </div>
+      </a>
     </li>
     <li *ngIf="user">
       <a routerLink="/pedidos" routerLinkActive="active">Mis Pedidos</a>
