--- a/src/app/components/cuento-card/cuento-card.component.scss
+++ b/src/app/components/cuento-card/cuento-card.component.scss
@@ -23,6 +23,12 @@
     margin: 0.5rem 0;
   }
 
+  p {
+    margin: 0.25rem 0;
+    color: #4B3A2F;
+    font-size: 1rem;
+  }
+
   button {
     padding: 0.5rem 1rem;
     border: none;
