Add cuentos route and update components

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -5,7 +5,7 @@
   </a>
   <ul class="nav-links">
     <li><a routerLink="/home" routerLinkActive="active">Inicio</a></li>
-    <li><a routerLink="/home" routerLinkActive="active">Cuentos</a></li>
+    <li><a routerLink="/cuentos" routerLinkActive="active">Cuentos</a></li>
     <li>
       <a class="carrito-enlace" (click)="abrirCarrito()" style="cursor: pointer;" >
         🛒
