Show cuentos list in admin

--- a/src/app/components/pages/admin/admin-cuentos/admin-cuentos.component.scss
+++ b/src/app/components/pages/admin/admin-cuentos/admin-cuentos.component.scss
@@ -72,3 +72,11 @@
     cursor: pointer;
   }
 }
+
+.grid-cuentos {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(240px, 1fr));
+  gap: 1.5rem;
+  padding: 2rem;
+  background-color: #fffaf0;
+}
