--- a/src/app/components/pages/checkout/checkout.component.html
+++ b/src/app/components/pages/checkout/checkout.component.html
@@ -17,7 +17,7 @@
       </label>
       <label>
         Teléfono:
-        <input formControlName="telefono" type="tel" required />
+        <input formControlName="telefono" type="tel" maxlength="9" pattern="[0-9]*" required />
       </label>
   
       <div class="resumen-carrito">
