--- a/src/app/components/pages/pago/pago.component.scss
+++ b/src/app/components/pages/pago/pago.component.scss
@@ -153,3 +153,39 @@
     cursor: pointer;
   }
 }
+
+.mensaje {
+  text-align: center;
+  padding: 1rem;
+  border-radius: 8px;
+  margin-bottom: 1rem;
+  font-size: 1rem;
+}
+
+.success-mensaje {
+  background-color: #d4edda;
+  color: #155724;
+  border: 1px solid #c3e6cb;
+}
+
+.error-mensaje {
+  background-color: #f8d7da;
+  color: #721c24;
+  border: 1px solid #f5c6cb;
+}
+
+.info-mensaje {
+  background-color: #d1ecf1;
+  color: #0c5460;
+  border: 1px solid #bee5eb;
+}
+
+.btn-confirmar {
+  background-color: #ffad60;
+  color: #fff;
+  border: none;
+}
+
+.btn-confirmar:hover {
+  background-color: #ffaa40;
+}
