--- a/src/app/components/cuento-card/cuento-card.component.scss
+++ b/src/app/components/cuento-card/cuento-card.component.scss
@@ -93,6 +93,11 @@
       cursor: pointer;
       font-size: 1.2rem;
       color: $primary;
+
+      img {
+        width: 1.5rem;
+        height: 1.5rem;
+      }
     }
   }
 
